# rinvaders

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.sh
docs/: index.html  main.css  main.js  rinvaders.js  rinvaders_bg.wasm
docs/rustdoc/: aliases.js  search-index.js  source-files.js
docs/rustdoc/js_sys/: EvalError.t.html  IteratorNext.t.html  Math.t.html  Reflect.t.html  WeakMap.t.html  WeakSet.t.html  all.html  decode_uri.v.html  decode_uri_component.v.html  encode_uri.v.html  encode_uri_component.v.html  fn.decode_uri.html  fn.decode_uri_component.html  fn.encode_uri.html  fn.encode_uri_component.html  fn.escape.html  fn.eval.html  fn.global.html  fn.is_finite.html  fn.parse_float.html  fn.parse_int.html  fn.try_iter.html  fn.unescape.html  index.html  is_finite.v.html  parse_float.v.html  parse_int.v.html  sidebar-items.js  struct.Array.html  struct.ArrayBuffer.html  struct.Boolean.html  struct.DataView.html  struct.Date.html  struct.Error.html  struct.EvalError.html  struct.Float32Array.html  struct.Float64Array.html  struct.Function.html  struct.Generator.html  struct.Int16Array.html  (+30 more)
docs/rustdoc/memory_units/: all.html  fn.size_of.html  index.html  struct.Bytes.html  trait.ByteSize.html  trait.RoundUpTo.html
docs/rustdoc/rinvaders/: ALLOC.v.html  TICK.v.html  __WASM_BINDGEN_GENERATED_3efceea8801f90d8.v.html  __WASM_BINDGEN_GENERATED_5d6734b2387f80d7.v.html  __WASM_BINDGEN_GENERATED_e3c1a1a7c96ebeca.v.html  __wasm_bindgen_generated_Game_keyboard_event.v.html  __wasm_bindgen_generated_Game_new.v.html  __wasm_bindgen_generated_Game_render.v.html  __wasm_bindgen_generated_Game_set_gamepad_state.v.html  __wasm_bindgen_generated_Game_update.v.html  __wasm_bindgen_generated_hello.v.html  __wbg_game_free.v.html  __wbindgen_describe_game_keyboard_event.v.html  __wbindgen_describe_game_new.v.html  __wbindgen_describe_game_render.v.html  __wbindgen_describe_game_set_gamepad_state.v.html  __wbindgen_describe_game_update.v.html  __wbindgen_describe_hello.v.html  all.html  constant.TICK.html  fn.hello.html  (+21 more)
res/: main.js
src/: input.rs  lib.rs  logging.rs  rendering.rs  utils.rs
src/entites/: enemy.rs  explosion.rs  fps_counter.rs  mod.rs  player.rs  projectile.rs  score.rs
(+1100 files in other folders)
