[package]
name = "rinvaders"
version = "0.1.0"
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.28"
lazy_static = "1.2.0"
wee_alloc = "0.4.2"

[dependencies.js-sys]
version = "0.3.5"

[dependencies.web-sys]
version = "0.3.5"
features = ["Window", "console", "HtmlCanvasElement", "CanvasRenderingContext2d", "KeyboardEvent"]
