[package]
name = "rinvaders"
version = "0.1.0"
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.2"
wee_alloc = "0.4"

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "console", "HtmlCanvasElement", "CanvasRenderingContext2d", "KeyboardEvent"]
